--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -229,7 +229,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/main_item_background"
+                android:background="?roundBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:orientation="horizontal"
@@ -256,7 +256,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/main_item_background"
+                android:background="?roundBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:orientation="horizontal"
@@ -283,7 +283,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/main_item_background"
+                android:background="?roundBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:orientation="horizontal"
@@ -310,7 +310,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/main_item_background"
+                android:background="?roundBackground"
                 android:clickable="true"
                 android:focusable="true"
                 android:orientation="horizontal"
