--- a/app/src/main/res/drawable/item_background_round.xml
+++ b/app/src/main/res/drawable/item_background_round.xml
@@ -3,7 +3,12 @@
     android:color="?colorControlHighlight"
     tools:ignore="PrivateResource">
 
-    <item android:id="@android:id/mask">
+    <item
+        android:id="@android:id/mask"
+        android:bottom="4dp"
+        android:end="8dp"
+        android:left="8dp"
+        android:top="4dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="8dp" />
