--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,10 @@
 <resources>
     <attr name="colorActionBar" format="color" />
     <attr name="colorStickyHeader" format="color" />
+    <attr name="listItemBackground" format="reference" />
+    <attr name="roundBackground" format="reference" />
     <attr name="actionBarTheme" format="reference" />
+    <attr name="listItemPadding" format="dimension" />
     <attr name="actionBarPopupTheme" format="reference" />
     <attr name="tabLayoutTheme" format="reference" />
 </resources>
