--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -53,6 +53,10 @@
             android:title="@string/settings_theme"
             app:iconSpaceReserved="false" />
         <SwitchPreferenceCompat
+            android:key="md2"
+            android:title="@string/material_design_2"
+            app:iconSpaceReserved="false" />
+        <SwitchPreferenceCompat
             android:key="colorized_action_bar"
             android:title="@string/colorized_action_bar"
             app:iconSpaceReserved="false" />
